tests/invalid_sem/def/def09.java
class Main {
    static void run() {
        int b = 12 + a;
    }
}
